--- a/index.html
+++ b/index.html
@@ -2,10 +2,28 @@
 <html lang="en">
 <head>
 
+    <link rel="stylesheet" type="text/css" href="scss/_header.scss"/>
     <link rel="stylesheet" type="text/css" href="scss/_colors.scss"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Winston-Salem IEEE</title>
+    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="./favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 
     <!-- Latest compiled and minified CSS -->
     <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">-->
@@ -13,21 +31,26 @@
     <link rel="stylesheet" href="scss/global.css">
 </head>
 <body>
-<header class="navbar navbar-expand navbar-dark flex-column flex-md-row wsieee-navbar color-teal">
+<header class="wsieee-navbar color-teal">
     <div class="header-spacer color-dark-teal">
 
     </div>
-    <div class="header-wrapper container">
+    <div class="header-wrapper">
         <nav>
-            <button class="navbar-btn active" id="sidebarCollapseBtn" type="button">
-                <span></span>
-                <span></span>
-                <span></span>
-            </button>
             <div class="row">
-                <a href="#" class="navbar-brand">WS-IEEE</a>
-                <div class="navbar-nav-scroll">
-                    <ul class="navbar-nav flex-row wsieee-navbar-nav">
+                <div class="col-sm-12 col-md-12 col-lg-1 col-xl-1">
+                    <button class="navbar-btn active" id="sidebarCollapseBtn" type="button">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </button>
+                </div>
+                <div class="col-sm-12 col-md-12 col-lg-1 col-xl-1">
+                    <a href="#" class="navbar-brand">WS-IEEE</a>
+                    <!--<div class="navbar-nav-scroll">-->
+                </div>
+                <div class="col-sm-12 col-md-12 col-lg-10 col-xl-10 main-nav">
+                    <ul class="wsieee-navbar-nav">
                         <li class="nav-item active">
                             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                         </li>
@@ -42,7 +65,9 @@
                         </li>
                         <li class="nav-item"><a href="#contact-information" class="nav-link">Contact Us</a></li>
                     </ul>
+                    <!--</div>-->
                 </div>
+
             </div>
         </nav>
     </div>
