--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <a href="#" class="navbar-brand">WS-IEEE</a>
                     <!--<div class="navbar-nav-scroll">-->
                 </div>
-                <div class="col-sm-12 col-md-12 col-lg-10 col-xl-10 main-nav">
+                <div class="col-sm-12 col-md-12 col-lg-8 col-xl-8 offset-xl-1 offset-lg-1 main-nav">
                     <ul class="wsieee-navbar-nav">
                         <li class="nav-item active">
                             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
