Updated splash image.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 
+    <link rel="stylesheet" type="text/css" href="scss/_mainSettings.scss"/>
     <link rel="stylesheet" type="text/css" href="scss/_header.scss"/>
     <link rel="stylesheet" type="text/css" href="scss/_colors.scss"/>
     <meta charset="UTF-8">
@@ -90,13 +91,13 @@
 
     <main class="content">
         <!--Begin of Main Image-->
-        <section class="row" id="main-splash">
-            <div class="col">
-                <div class="splash-caption">
-                    <h3>Welcome to Winston-Salem's IEEE</h3>
-                    <p>We love it here. Join us!</p>
-                    <a class="button" href="#contact-information">JOIN US</a>
-                </div>
+        <section class="row justify-content-center" id="main-splash">
+            <div class="col-3">
+                    <div class="splash-caption">
+                        <h3>Welcome to Winston-Salem's IEEE</h3>
+                        <p>We love it here. Join us!</p>
+                        <a class="button" href="#contact-information">JOIN US</a>
+                    </div>
             </div>
         </section>
         <!--End of Main image-->
