Fixed hover again and removed ul styles on the temporary calendar.

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <div class="col-lg-10 col-xl-10 col-md-12 col-sm-12">
 
                 <div class="month">
-                    <ul>
+                    <ul style="list-style: none">
                         <li class="prev">&#10094;</li>
                         <li class="next">&#10095;</li>
                         <li>December<br>
