Finishing touches before I send to WSIEEE.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,6 @@
 <html lang="en">
 <head>
 
-    <link rel="stylesheet" type="text/css" href="scss/_mainSettings.scss"/>
-    <link rel="stylesheet" type="text/css" href="scss/_header.scss"/>
-    <link rel="stylesheet" type="text/css" href="scss/_colors.scss"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Winston-Salem IEEE</title>
@@ -26,6 +23,7 @@
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Oxygen|PT+Serif:400,700" rel="stylesheet">
     <!-- Latest compiled and minified CSS -->
     <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">-->
     <link rel="stylesheet" href="./css/bootstrap.min.css">
